fix(frontend): overflowing comments when there is code
Issue #5960 
PR #5961

--- a/frontend_lib/src/component/Timeline/Comment.styl
+++ b/frontend_lib/src/component/Timeline/Comment.styl
@@ -27,6 +27,8 @@
 
     &__content
       flex 1
+      min-width 0
+
       &__text
         img
           max-width 100%
